--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      defer
+      src="../node_modules/@fortawesome/fontawesome-free/js/all.js"
+    ></script>
     <title>Rick and Morty API</title>
   </head>
   <body></body>
